# django-tasks-oban

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml
.github/workflows/: ci.yml  test.yml
src/django_tasks_oban/: __init__.py  admin.py  apps.py  backends.py  decorators.py  engine.py  manage.py  models.py  runtests.py
src/django_tasks_oban/migrations/: 0001_initial.py
src/django_tasks_oban/tests/: settings.py  test_backends.py  test_commands.py  test_schedule_backends.py
tests/: settings.py  test_backends.py  test_checks.py  test_commands.py  test_schedule_backends.py
tests/management/commands/: oban_worker.py
