[project]
name = "django-tasks-oban"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maiquel Leonel", email = "skywishmtfk@gmail.com" }
]
requires-python = ">=3.12.0"
dependencies = [
    "django>=6.0",
    "asyncpg>=0.29.0", # Adicione explicitamente para garantir o driver Postgresuv
    "oban",
    "uuid>=1.30",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "dj-database-url>=3.1.2",
    "psycopg[binary]>=3.3.3",
]

[tool.uv.sources]
oban = { git = "https://github.com/oban-bg/oban-py.git" }


[tool.coverage.run]
source = ["src/django_tasks_oban"]
branch = true
omit = [
    "*/migrations/*",
    "*/management/commands/*", # O worker é testado via mock, o real não terá coverage 100%
    "*/tests/*",
    "*/apps.py",
    "*/admin.py",
    "__init__.py",
    "manage.py",
    "runtests.py",
]

[tool.coverage.report]
skip_covered = false
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "import asyncpg", # Evita erro se o driver não estiver no ambiente de report
]
include = ["src/django_tasks_oban/*"]

[tool.coverage.html]
directory = "htmlcov"