[project]
name = "django-tasks-oban"
version = "0.2.0"
description = "Transactional PostgreSQL-native Task Backend for Django 6+ (Oban-compatible)"
readme = "README.md"
authors = [
    { name = "Maiquel Leonel", email = "skywishmtfk@gmail.com" }
]
requires-python = ">=3.13.0"
dependencies = [
    "django>=6.0",
    "psycopg[binary]>=3.1.0",
    "asyncpg>=0.29.0",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "dj-database-url>=3.1.2",
    "oban",
]

[tool.uv.sources]
oban = { git = "https://github.com/oban-bg/oban-py.git" }


[tool.coverage.run]
source = ["src/django_tasks_oban"]
branch = true
omit = [
    "*/migrations/*",
    "*/management/commands/*",
    "*/tests/*",
    "*/apps.py",
    "*/admin.py",
]

[tool.coverage.report]
skip_covered = false
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "import asyncpg", # Evita erro se o driver não estiver no ambiente de report
]
include = ["src/django_tasks_oban/*"]

[tool.coverage.html]
directory = "htmlcov"