[project]
name = "django-tasks-oban"
version = "0.3.2"
description = "Transactional PostgreSQL-native Task Backend for Django 6+ (Oban-compatible)"
readme = "README.md"
authors = [
    { name = "Maiquel Leonel", email = "skywishmtfk@gmail.com" }
]
requires-python = ">=3.13.0"
dependencies = [
    "django>=6.0",
    "psycopg[binary]>=3.1.0",
    "asyncpg>=0.29.0",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "asgiref>=3.11.1",
    "coverage>=7.13.4",
    "django-stubs>=6.0.1",
    "mypy>=1.19.1",
    "oban",
    "pre-commit>=4.5.1",
]

[tool.uv]
package = true

[tool.uv.sources]
oban = { git = "https://github.com/oban-bg/oban-py.git" }


[tool.coverage.run]
source = ["src/django_tasks_oban"]
branch = true
omit = [
    "*/migrations/*",
    "*/management/commands/*",
    "*/tests/*",
    "*/apps.py",
    "*/admin.py",
    "__init__.py",
]

[tool.coverage.report]
skip_covered = false
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "import asyncpg", # Evita erro se o driver não estiver no ambiente de report
]
include = ["src/django_tasks_oban/*"]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
mypy_path  = '.'

strict = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true        # Mantém a verificação dentro das funções
warn_return_any = false
no_implicit_optional = true

# Ignora erros em arquivos que você não quer mexer agora
[[tool.mypy.overrides]]
module = ["tests.*", "manage"]
ignore_errors = true

[tool.django-stubs]
# Se o seu settings estiver em oban/settings.py, use "oban.settings"
django_settings_module = "tests.settings"
